<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.searchgo.CreateEventActivity">

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="16dp"
        android:paddingRight="16dp" >
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/enter_event_name_layout">
        <TextView
            android:id="@+id/lbl_enter_event_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/event_name_lbl"
            android:layout_alignParentLeft="true"
            android:textSize="18dp"
            android:layout_centerVertical="true"/>
        <EditText
            android:id="@+id/enter_event_name"
            android:hint="@string/enter_event_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:drawable/editbox_background"
            android:layout_toRightOf="@+id/lbl_enter_event_name"
            android:layout_alignParentTop="true"/>
        </RelativeLayout>

        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/enter_last_seen_layout"
            android:layout_below="@+id/enter_event_name_layout">
            <TextView
                android:id="@+id/lbl_enter_last_seen"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lbl_enter_last_seen"
                android:textSize="18dp"
                android:layout_centerVertical="true"/>
        <fragment android:name="com.searchgo.fragments.DateSelectorFragment"
            android:id="@+id/enter_last_seen"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_toRightOf="@+id/lbl_enter_last_seen"
            />
        </RelativeLayout>
        <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/radio_category_group"
            android:layout_below="@+id/enter_last_seen_layout">
        <TextView
            android:id="@+id/category_lbl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/category_lbl"
            android:textSize="20sp"
            />
        <RadioButton android:id="@+id/radio_category_dog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dog_category_lbl"
            />
        <RadioButton android:id="@+id/radio_category_man"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/man_category_lbl"
            />
    </RadioGroup>

        <RelativeLayout
            android:id="@+id/add_picture_panel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/radio_category_group">

        <Button
            android:id="@+id/add_picture_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/add_new_picture_lbl"
            android:textAllCaps="false"
            android:textSize="20sp" />

        <ImageView
            android:id="@+id/event_picture"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="0dp"
            android:adjustViewBounds="true"
            android:scaleType="fitXY"
            android:visibility="gone"/>
        </RelativeLayout>

    <Button
        android:id="@+id/save_and_continue"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_below="@+id/add_picture_panel"
        android:text="@string/save_new_event_and_continue"
        android:textAllCaps="false"
        android:textSize="20sp"/>
</RelativeLayout>

    </ScrollView>

</android.support.constraint.ConstraintLayout>
